--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "animate.css": "^4.1.1",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
