font family updated

--- a/output/server/next-font-manifest.json
+++ b/output/server/next-font-manifest.json
@@ -1,1 +1,1 @@
-{"pages":{},"app":{},"appUsingSizeAdjust":false,"pagesUsingSizeAdjust":false}
+{"pages":{"/":["static/media/3f7fe2615cca6efb-s.p.otf","static/media/9b80afd9d35aa655-s.p.otf","static/media/1bd1cdd783bc04f0-s.p.otf","static/media/ae57312c28a52973-s.p.otf","static/media/1378bc02616edd4d-s.p.otf"]},"app":{},"appUsingSizeAdjust":false,"pagesUsingSizeAdjust":true}
